Update custom theme: fix scrollbars

--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -535,6 +535,8 @@ main > .container{
 @media screen and (min-width: 720px){
 
     ::-webkit-scrollbar {
+        height: 17px;
+        width: 17px;
         background-color: transparent!important;
     }
 
